@@ -5,6 +5,7 @@ version 0.8.2-rc1 - dd-MMM-2009
  . Actions: RotateTo uses min distance (issue #584)
  . Particles: FreeMovement uses World-Coordinates (issue #241)
  . Tests: Added Particle + Parallax test (part of issue #241)
+ . TileMap: TMX layers work without tiles (issue #587)
  
 version 0.8.2-rc0 - 5-Oct-2009
  . Actions: Added EaseBack family actios (issue #568)
